docs: update docs